Fixed the line break in status view. And also fixed the color of the text editor initial text.

--- a/public/css/newsfeed.css
+++ b/public/css/newsfeed.css
@@ -226,6 +226,7 @@
 }
 .pg-newsfeed-common-content-post-content{
     margin-top: 15px;
+    word-wrap: break-word;
 }
 .pg-newsfeed-post-description{
     font: 12px 'montserratregular', sans-serif;
